# nexus-etl

./: .gitignore  LICENSE  Makefile  README.md  TEMP_NUITKA_STANDALONE_BLUEPRINT.md  config.example.yml  employees.example.csv  pyproject.toml  pytest.ini
connector/: ankeyApiClient.py  cacheCommandService.py  cacheDb.py  cacheRepo.py  cacheService.py  cacheSourceApi.py  cacheSourceJson.py  cli.py  config.py  csvReader.py  diff.py  errors.py  importApplyService.py  importPlanService.py  interfaces.py  loggingSetup.py  main.py  matcher.py  models.py  planModels.py  planReader.py  plan_runtime.py  planner.py  protocols_api.py  protocols_lookup.py  protocols_services.py  protocols_sources.py  reporter.py  sanitize.py  timeUtils.py  userApi.py  userPayloadBuilder.py  validator.py
connector/common/: README.md  interactive_io.py  observability.py  run_id.py  runtime_paths.py  sanitize.py  time.py
connector/common/observability/: __init__.py  events.py  layout.py  ports.py
connector/config/: README.md  __init__.py  app_settings.py  config.py  diagnostics.py  loader.py  models.py  projections.py
connector/datasets/: README.md  __init__.py  apply_adapter.py  cache_registry.py  cache_sync.py  registry.py  spec.py  yaml_spec.py  yaml_spec_loader.py
connector/datasets/employees/: apply_adapter.py  cache_spec.py  cache_sync_adapter.py  csv_record_adapter.py  diagnostic_catalog.py  enrich_deps.py  enricher_spec.py  field_rules.py  mapping_spec.py  models.py  normalized.py  normalizer_spec.py  planning_policy.py  projector.py  record_sources.py  source_mapper.py  spec.py  (+2 more)
connector/delivery/: README.md  bootstrap.py
connector/domain/: README.md  __init__.py  error_codes.py  exceptions.py  models.py
connector/infra/: README.md
connector/planning/: __init__.py  adapters.py  decision.py  differ.py  employee_planner.py  factory.py  matcher.py  plan_builder.py  protocols.py  registry.py
connector/usecases/: README.md  __init__.py  cache_clear_usecase.py  cache_command_service.py  cache_refresh_service.py  cache_status_usecase.py  enrich_usecase.py  import_apply_service.py  import_plan_service.py  mapping_usecase.py  match_usecase.py  normalize_usecase.py  plan_usecase.py  planning_match_runtime.py  ports.py  resolve_usecase.py  topology_bootstrap.py  topology_match.py  topology_resolve.py  topology_source_validation.py  topology_target_build.py  validate_usecase.py
connector/validation/: __init__.py  adapters.py  dataset_rules.py  deps.py  pipeline.py  registry.py  row_rules.py
datasets/: dictionary.yaml  employees.cache.yaml  employees.enrich.yaml  employees.mapping.yaml  employees.match.yaml  employees.normalize.yaml  employees.resolve.yaml  employees.sink.yaml  employees.source.yaml  employees.validate.yaml  enrich.yaml  mapping.yaml  organizations.cache.yaml  registry.yaml  registry.yml  sink.yaml  source.yaml  target.yaml  validate.yaml
datasets/dictionaries/: dictionary.yaml  manifest.yaml  manifest.yml  organizations.csv  organizations.dictionary.yaml
datasets/targets/: ankey.target.yaml
docs/: ARCHITECTURE_INVARIANTS.md  Cache_Architecture.md  Cache_DSL.md  DSL_Core_Issues.md  DSL_idea.md  Matcher_roadmap.md  Planning_Resolve_Matcher.md  Stage_Engine_Style.md  Tailings.md
docs/adr/: INDEX.md  TEMPLATE-DECISION.md  TEMPLATE-PROBLEM.md
docs/dev/: INDEX.md  README.md  TEMPLATE.md
docs/notes/: INDEX.md
docs/uml/: INDEX.md  TEMPLATE_STYLE.md  Tailings.md
examples/configs/: config_example.yml  config_example_ankey.yml
examples/sources/: source_employees_example.csv
examples/yaml_templates/: cache.yaml  dictionary.yaml  enrich.yaml  manifest.yaml  match.yaml  normalize.yaml  registry.yaml  resolve.yaml  sink.yaml  source.yaml  topology.yaml
scripts/: build_nuitka_standalone.sh  install_rhel8.sh  smoke_nuitka_standalone.sh
tests/: conftest.py  runtime_test_support.py  test_ankey_client_request_any.py  test_apply_secrets_provider.py  test_cli_smoke.py  test_config_priority.py  test_request_executor.py  test_stage2_artifacts.py  test_stage3_enrich.py  test_stage3_validate.py  test_stage4_cache.py  test_stage5_api_cache_refresh.py  test_stage6_plan.py  test_stage7_import_apply.py  test_stage8_resilience.py  vault_key_provider.py  vault_unseal_setup.py
tests/architecture/: test_apply_usecase_boundaries.py  test_cache_layer_boundaries.py  test_delivery_di_boundaries.py  test_infra_sqlite_layer_boundaries.py  test_observability_logging_boundaries.py  test_planner_layer_boundaries.py  test_report_layer_cleanup_boundaries.py  test_target_layer_boundaries.py  test_topology_dsl_boundaries.py  test_vault_layer_boundaries.py
tests/cache/: test_cache_repo_find.py  test_generic_cache_handler.py  test_identity_runtime_state.py  test_pending_links_repository.py
tests/cache_core/: test_cache_dependency_graph.py  test_cache_drift_service.py
tests/data/: org_min.json  users_min.json
tests/diagnostics/: test_diagnostics_core.py
tests/e2e/: conftest.py  test_cli_smoke.py
tests/integration/: conftest.py
tests/mapping/: test_mapping_report.py
tests/performance/: conftest.py
tests/planning/: test_generic_planner.py  test_match_dsl.py  test_matcher_fuzzy_scoring.py  test_matcher_identity_rules.py  test_matcher_rules_validation.py  test_matcher_source_dedup.py  test_matcher_typed_decision.py  test_plan_secret_fields.py  test_resolve_dsl.py
tests/secrets/: test_file_vault.py
tests/support/: dataset_artifacts.py
tests/transform/: test_dsl_build_options.py  test_enrich_dsl.py  test_enricher.py  test_mapping_dsl.py  test_resolver.py  test_source_mapper.py  test_source_spec.py  test_stage_builders.py
tests/unit/: conftest.py
tests/usecases/: test_import_plan_service_pending_rows.py  test_resolve_usecase_transactions.py
tests/validation/: test_dataset_rules.py  test_row_validator.py
(+1049 files in other folders)
