[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AnkeyIDM---Employee-Data-Synchronization"
version = "0.1.0"
description = "CLI connector to import employees into Ankey IDM via REST API"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["connector*"]
exclude = ["logs*", "cache*", "reports*"]

[project.scripts]
syncEmployees = "connector.main:app"