[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AnkeyIDM---Employee-Data-Synchronization"
version = "0.1.0"
description = "CLI connector to import employees into Ankey IDM via REST API"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "tenacity>=9.0.0",
  "structlog>=25.0.0",
  "cryptography>=43.0.0",
  "argon2-cffi>=23.1.0",
  "dependency-injector>=4.40.0",
  "polars>=1.0.0",
  "anyascii>=0.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-benchmark>=4.0.0",
  "pyperf>=2.7.0",
  "ruff>=0.6.0",
  "pytest-cov>=7.0.0",
  "import-linter>=2.0.0",
]

perf = [
  "pytest-benchmark>=4.0.0",
  "pyperf>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["connector*"]
exclude = ["logs*", "cache*", "reports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not performance'"
python_files = ["test_*.py"]

[project.scripts]
nexus = "connector.main:app"
